--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@strapi/strapi": "^4.12.1",
     "contentful": "^10.12.13",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.408.0",
