--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "staffingforindustry",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
+  "homepage": "https://nonsoiwedinobi.github.io/staffingforindustry",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "dev": "vite",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -27,6 +30,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.5",
     "vite": "^5.3.1"
