--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@sendgrid/mail": "^8.1.3",
     "@strapi/strapi": "^4.12.1",
     "contentful": "^10.12.13",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "lucide-react": "^0.408.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
