--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "concurrently \"npm run dev\" \"node server.js\""
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.22.9",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@google-cloud/translate": "^8.4.0",
     "@sendgrid/mail": "^8.1.3",
     "@strapi/strapi": "^4.12.1",
+    "axios": "^1.7.4",
     "contentful": "^10.12.13",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -27,13 +30,15 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
